--- a/src/main/resources/static/messages_fr.properties
+++ b/src/main/resources/static/messages_fr.properties
@@ -13,3 +13,4 @@
 0013=Date de fin requise
 0014=La date de fin doit être valide
 0015=La date de début est antérieure à la date de fin
+0016=Réservation déjà annulée
