--- a/src/main/resources/static/messages_en.properties
+++ b/src/main/resources/static/messages_en.properties
@@ -12,5 +12,5 @@
 0012=Start date must be valid
 0013=End date required
 0014=End date must be valid
-0015=Start date is before end date
+0015=Start date must be before end date
 0016=Booking already canceled
